--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "/images/headshot.png"
+  avatar           : "/images/headshot.jpg"
   name             : "Yuan Wei"
   pronouns         : # example: "she/her"  
   bio              : # "Short biography for the left-hand sidebar"
