--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Your Name / Site Title"
+title                    : "Yuan Wei / Ph.D. Candidate"
 title_separator          : "-"
 name                     : &name "Your Name"
 description              : &description "personal description"
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/yuan-wei-4a9a0b171/"
+  linkedin         : "https://www.linkedin.com/in/yuan-wei-4a9a0b171"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
