--- a/_config.yml
+++ b/_config.yml
@@ -56,7 +56,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : "https://www.linkedin.com/in/yuan-wei-4a9a0b171"
+  linkedin         : "yuan-wei-4a9a0b171"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
