--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ author:
   bio              : # "Short biography for the left-hand sidebar"
   location         : # "Earth"
   employer         : # "TAMU"
-  uri              : https://jet00wy.github.io/YuanWeiWebPage/
+  uri              : "https://jet00wy.github.io/YuanWeiWebPage/"
   email            : "weiyuan1996@tamu.edu" 
 
   # Academic websites
