--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 locale                   : "en-US"
 title                    : "Yuan Wei / Ph.D. Candidate"
 title_separator          : "-"
-name                     : &name "Yuan W:ei"
+name                     : &name "Yuan Wei"
 description              : &description "personal description"
 url                      : https://jet00wy.github.io/YuanWeiWebPage/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
